demos/network-policy/np-allow-to-pkad-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-pkad
  namespace: np-pk
spec:
  podSelector:
    matchLabels:
      app: pkad
  ingress:
    - from:
      - podSelector:
          matchLabels: {}
