demos/network-policy/np-deny-all-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-egress
  namespace: ns-pk
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Egress
