demos/network-policy/np-deny-all-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: np-pk
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
