demos/network-policy/np-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: np-pk
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
    - Ingress
    - Egress
